# Ros2_Robot2

install/robot_action_demo/include/robot_action_demo/robot_action_demo/action/: move_robot.h  move_robot.hpp
install/robot_action_demo/include/robot_action_demo/robot_action_demo/action/detail/: move_robot__builder.hpp  move_robot__functions.h  move_robot__struct.h  move_robot__type_support.cpp
install/robot_action_demo/include/robot_action_demo/robot_action_demo/msg/: rosidl_generator_cpp__visibility_control.hpp
install/robot_action_demo/lib/robot_action_demo/: move_robot_server
install/robot_action_demo/local/lib/python3.10/dist-packages/robot_action_demo/: _robot_action_demo_s.ep.rosidl_typesupport_fastrtps_c.c  _robot_action_demo_s.ep.rosidl_typesupport_introspection_c.c
install/robot_action_demo/local/lib/python3.10/dist-packages/robot_action_demo/action/: __init__.py  _move_robot.py
install/robot_action_demo/share/ament_index/resource_index/package_run_dependencies/: robot_action_demo
install/robot_action_demo/share/robot_action_demo/: package.dsv  package.ps1  package.sh
install/robot_action_demo/share/robot_action_demo/action/: MoveRobot.idl
install/robot_action_demo/share/robot_action_demo/cmake/: ament_cmake_export_targets-extras.cmake  robot_action_demoConfig.cmake  rosidl_cmake-extras.cmake
log/: latest_build
src/robot_action_demo/: CMakeLists.txt  package.xml  setup.py
src/robot_action_demo/robot_action_demo/: move_robot_client.py  move_robot_server.py
