<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_action_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sciencestar9346@163.com">root</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

    <!-- Action 生成依赖 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 运行依赖 -->
  <depend>rclpy</depend>
  <depend>action_msgs</depend>

  <!-- 必须声明这是 action 包 -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
